# football-ranking-3

./: .gitignore  Dockerfile  README.md  pyproject.toml
experiments/: defense_matrix.csv  rank.ipynb  rankold.ipynb
src/football_ranking/: __init__.py  __main__.py  config.py  test_scores.py
src/football_ranking/compute/: rank.py
src/football_ranking/routers/: client.py  scores.py
src/football_ranking/routers/static/: daisyui@5.css  datastar.js  index.html
