[project]
name = "football-ranking"
version = "3.0.0"
description = "Live Rankings of College Football Teams"
authors = [{ name = "phcreery", email = "phcreery@gmail.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.1",
    "toml>=0.10.2",
    "requests>=2.32.3",
    "httpx>=0.27.2",
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
    "pandas>=2.2.3",
    "datastar-py>=0.6.3",
]
readme = "README.md"
requires-python = ">=3.10"


[dependency-groups]
dev = [
    "coverage>=7.5.4",
    "pytest>=8.2.2",
    "ipython>=8.29.0",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# the cmd must be a String
# project scripts will be compiled into the executable file
"start" = "football_ranking.__main__:main"

# [tool.uv.scripts]
# # the cmd can be a String or an array of args
# # rye scripts will not be compiled into the executable file
# "dev" = { cmd = "python -m football_ranking", env = { "RELOAD" = "True", "LOG_LEVEL" = "debug" } }
